# books-are-fun-python

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/backend/: Dockerfile  main.py  routes.py
src/backend/books/: crud.py  endpoints.py  schema.py
src/backend/core/: config.py  utils.py
src/backend/core/db/: Dockerfile  database.py  seed.sql
src/frontend/: Dockerfile  main.py  model.py  request.py
