[project]
name = "books-are-fun-python"
version = "0.1.0"
description = "Why not in python as well?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]
line-length = 80
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "E501",
]
